--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ addons:
     packages:
       - oracle-java8-installer
 
+after_success:
+- ./gradlew jacocoTestReport coveralls
+
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
